src/test/ui/feature-gate-const_let.stderr
error[E0016]: blocks in constant functions are limited to items and tail expressions
  --> $DIR/feature-gate-const_let.rs:16:13
   |
LL |     let x = 42; //~ ERROR blocks in constant functions are limited to items and tail expressions
   |             ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0016`.
